--- a/css/style.css
+++ b/css/style.css
@@ -15,9 +15,6 @@ ul {
 label {
 	margin: 0;
 }
-.text-center {
-	text-align: center;
-}
 /*-- //Reset-Code --*/
 p {
 	margin: 0;
@@ -26,24 +23,16 @@ p {
 	color:#888;
 }
 /*-- header styling starts here --*/
-
-.agileits-main {
-    padding: 1em 0 0;
-}
-.agile-nav {
-    margin: 2em 0 0;
-}
-i.fa.fa-download.hire-icon {
-    margin-left: 0.6em;
-}
-h3.w3l-head {
-    color: #000;
-    font-size: 2.8em;
-    font-weight: 300;
-    letter-spacing: 0px;
-    margin-bottom: 1em;
+.w3l-head{
     text-align: center;
-	position:relative;
+    font-size: 350%;
+}
+span.title-head{
+    background: #d65cb0;
+    padding: 0px 10px;
+    color: #fdfdfd;
+    display: inline-block;
+    margin-right:1px;
 }
 h3.w3l-head:after {
     content: "";
@@ -52,155 +41,44 @@ h3.w3l-head:after {
     width: 100px;
     height: 5px;
     position: absolute;
+    right: 44%;
 }
-span.title-head {
-    background: #d65cb0;
-    padding: 0px 10px;
-    color: #fdfdfd;
-    display: inline-block;
-	margin-right:1px;
+.fa{
+    margin-top: 10px;
 }
-span.title-head.gallery {
-    background: #066093;
+i.fa {
+    padding: 0 0.5em;
 }
-#about h3.w3l-head:after{
-	right: 44%;
-}
-#port h3.w3l-head:after {
-    right: 39.5%;
-    width: 120px;
-}
-#services h3.w3l-head:after {
-    right: 44.5%;
-	width:82px;
-}
-#contact h3.w3l-head:after {
-    width: 80px;
-    right: 43.2%;
-    background: #44c7f4;
-}
-.w3ls-section{
-	padding:4em 0 ;
-}
-ul.simplefilter {
-    text-align: center;
-	margin:4em 0;
-}
-.wthree-s1:hover h4 {
-    color: #fff;
-}
-/*-- /skills --*/
-.skills {
-	 background-size: cover;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    -ms-background-size: cover;
-}
-.skill-agile h4 {
-    font-size: 1.6em;
-    text-transform: uppercase;
-    color: #fff;
-    letter-spacing: 2px;
-}
-body .bar_group__bar.thin::before, body .bar_group__bar.thick::before {
-	display: block;
-	content: '';
-	position: absolute;
-	z-index: -1;
+/*--/content --*/
+.w3l-left{
+    padding-left: 5%;  
 }
 
-body .bar_group__bar.thin::before {
-  width: 100%;
-  height:17px;
-  background: #0670ad;
+.w3l-right{
+    padding-left: 5%;
+}
 
+/* education */
+.w3l-about{
+    padding-top: 20px;
 }
-.skill-agile,.agileits-skill-agile {
-     margin-top: 2em;
+.Education{
+    margin-top: 2em;
 }
-body .bar_group__bar.thin {
-    height: 17px;
-    background: #d65cb0;
-    margin-bottom:1em;
-    -webkit-transition: width 2s;
-    transition: width 2s;
-
-}
-.bar_group{
-    position: relative;
-    z-index: 1;
-}
-body .bar_group__bar.thin:last-child {
-    margin-bottom: 0;
-}
-.agileits_skills_grids,.wthree_team_grids{
-    margin: 3em 0 0;
-}
-p.b_label {
-    font-size: .9em;
-    text-transform: uppercase;
-    color:#ffffff;
-     margin-bottom: 1em;
-	 text-align:right;
-}
-/*-- //skills --*/
-/*-- /education --*/
-
-.experience {
-    border-left: 4px solid #dcdcdc;
-}
-.education h3 {
-    text-align: right;
- }
-h3.w3l_head,.education h3{
-	color: #0c0c0c;
-    text-transform: capitalize;
-    font-weight: 400;
-    font-size: 1.7em;
-}
-h4.w3ls-uni{
-	float:left;
+.info-grids{
+    margin-top: 2em;
 }
 h4.w3layouts-year{
-	float:right;
+    float:right;
 }
-.education-w3l {
-    min-height: 408px;
+h4.w3ls-uni{
+    float:left;
 }
-.education-w3l{
-	  padding: 2em 4em;
-}
-.skills{
-	 padding: 0 4em;
-}
-.education-agile-w3l-year h4 {
+.info-align-year h4{
     font-size: 1em;
     text-transform: capitalize;
     color: #0b9bee;
     font-weight: 400;
-}
-.skill-agile p {
-    color: #0670ad;
-    font-weight: 400;
-    font-size: 1em;
-    letter-spacing: 1px;
-}
-.agileits-skill-agile p {
-    color: #000000;
-    font-weight: 300;
-    letter-spacing: 0.5px;
-    width: 80%;
-}
-.education-agile-grids {
-    margin-top: 2em;
-}
-.education-agile-w3l-year h6 {
-    color: #44c7f4;
-    text-transform: uppercase;
-    letter-spacing:2px;
-	font-style:italic;
-	font-size:1em;
 }
 .education-agile-w3l-info p {
     font-size: 0.9em;
@@ -208,83 +86,62 @@ h4.w3layouts-year{
     color: #777;
     margin-top: 10px;
 }
-.education-agile-w3l.two {
-    margin: 1em 0;
-    border: none;
-    border-top: 1px solid #ddd;
-    padding: 1em 0;
-}
-i.wthree-title-list {
-    color: #0d2d3e;
-    margin-right: 0.5em;
-	font-size: 1.3em;
-}
-/*-- //education --*/
 
-/*-- //about --*/
+/* info */
+h4.w3layouts-info{
+    float:right;
+    margin-top: 10px;
+    color: #0b9bee;
+}
+h4.w3ls-type{
+    float:left;
+    height: 50px;
+    width: 50px;
+    background-color: #d65cb0;
+    border-radius: 25px;
+}
 
-.experience-grids {
-    width: 33.33%;
-	float:left;
+/*-- /skills --*/
+.Expertise{
+    margin-top: 2em;
 }
-.experience-left {
-    width: 75%;
-    background: #44c7f4;
-    text-align: center;
-    padding: 0.8em;
-	-webkit-transition: .5s all;
-	-moz-transition: .5s all;
-	transition: .5s all;
-	-o-transition: .5s all;
-	-ms-transition: .5s all;
-} 
-.experience-right {
-    float: left;
-    width: 25%;
-    padding: 0.5em 1.5em 0;
-    background: #066093;
+.bar_group{
+    position: relative;
+    z-index: 1;
 }
-.experience-left h3 {
-    font-size: 1.1em;
-    color: #fff;
-    font-weight: 400;
-    letter-spacing: 1px;
-    text-transform: capitalize;
-    text-align: center;
+.skill{
+    height: 20px;
+    width: 90%;
+    background-color: #d65cb0;
+    margin: 20px;
 }
-.experience-right p {
-    color: #464646;
-    line-height: 30px;
-    font-size: 14px;
+.ability{
+    height: 20px;
+    width: 30%;
+    background-color:crimson;
 }
-.experience-left h5 {
-    font-size: 1.5em;
-    color: #fff;
-    margin-top: 1em;
-    font-weight: bold;
-}
-.experience-right h4 {
-    font-size: 1.6em;
-    color: #1dadd3;
-    margin-bottom: 0.5em;
-    font-weight: 400;
-}
-.experience-grids:hover .experience-left {
-    background: #066093;
-} 
-.experience-grids:hover .experience-right{
-	background:#44c7f4;
-}
-.experience-left i {
-    color: #fff;
-}
-.experience-grids:hover .experience-right h4{
-	color:#fff;
-}
-.experience-left h3 span {
-    font-size: .5em;
+/* profile */
+.profile-text p{
+    color: #000000;
     font-weight: 300;
-    vertical-align: middle;
-    margin-left: 5px;
+    letter-spacing: 0.5px;
+    width: 90%;
 }
-/*-- //experience --*/
+.w3l_head{
+    margin-bottom: 1em;
+}
+/* Experience */
+.Experience{
+    margin-top: 2em;
+}
+
+.w3l-left::after{
+    content: "";
+    background: #627474;
+    display: inline-block;
+    width: 5px;
+    height: 1000px;
+    position: absolute;
+    right: -10px;
+    top: 0px;
+}
