--- a/style.css
+++ b/style.css
@@ -1,10 +1,9 @@
 html {
         height: 100%;
     }
-
     body {
         height: 100%;
-        background: #F1E0CD url("images/background.jpg") no-repeat;
+        background: #F1E0CD url("./images/background.jpg") no-repeat;
         color: #404041;
         background-size: cover;
         font-family: "Source Sans Pro", sans-serif;
