--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,7 @@ html {
     }
     body {
         height: 100%;
-        background: #F1E0CD url("./images/background.jpg") no-repeat;
+        background: #F1E0CD url("../img/background.jpg") no-repeat;
         color: #404041;
         background-size: cover;
         font-family: "Source Sans Pro", sans-serif;
