--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,8 +30,9 @@ html {
 
     #Profile {
         margin: 6rem auto 0;
-        background: rgb(245, 250, 237, 0.6);
+        background: rgb(245, 250, 237);
         max-width: 80%;
+        opacity: 0.7;
     }
     .language{
         position: absolute;
