--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,7 +30,7 @@ html {
 
     #Profile {
         margin: 6rem auto 0;
-        background: rgb(245, 250, 237);
+        background: white;
         max-width: 80%;
         opacity: 0.7;
     }
