--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,21 @@
 html {
         height: 100%;
     }
+
+    @media only screen and (max-width: 768px){
+        .container{
+            padding: 0;
+            margin: 0;
+            width: 100%;
+        }
+    }
+     
+    @media only screen and (min-width: 769px){
+        .container{
+            
+        }
+    }
+
     body {
         height: 100%;
         background: #F1E0CD url("../img/background.jpg") no-repeat;
@@ -31,7 +46,7 @@ html {
     #Profile {
         margin: 6rem auto 0;
         background: white;
-        max-width: 80%;
+        max-width: 100%;
         opacity: 0.7;
     }
     .language{
@@ -74,7 +89,7 @@ html {
     #social a {
         margin: 0 0.5rem;
     }
-
+    
     i[class*="2x"] {
         color: #DA609B;
     }
